[package]
name = "amnesia-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
serde = "1.0"
serde_json = "1.0"
futures = "0.3.30"
rand = "0.8"
tokio = {version = "1.40.0", features = ["full"]}
tokio-stream = "0.1"
async-stream = "0.3"
mongodb = "3.1.0"
dotenvy = "0.15.7"
color-eyre = "0.6.3"
chrono = {version= "0.4.38", features = ["serde"]}
uuid = {version = "1.10.0", features = ["v4"]}
prost-types = "0.13.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
tracing-error = "0.2"

[build-dependencies]
tonic-build = "0.12"
